# libsocket

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  CMakeEnv.cmake  CMakeLists.txt  LICENSE  README.md  TODO  appveyor.yml  chen.h  circle.sh  circle.yml  codecov.yml
.github/: FUNDING.yml
chen/: chen.h  chen.hpp
chen/base/: any.cpp  date.cpp  num.cpp  str.cpp  str.hpp  time.cpp  utf8.cpp
chen/data/: ini.cpp  ini.hpp  json.cpp  json.h  json.hpp  json.inl  lang.cpp  lang.hpp  plist.cpp  plist.hpp  xml.cpp  xml.h  xml.hpp
chen/lang/: locale.cpp  locale.h  locale.hpp
chen/mt/: callable.cpp  semaphore.cpp  semaphore.hpp  threadpool.cpp  threadpool.hpp
chen/sync/: routine.cpp  routine.hpp  semaphore.cpp  semaphore.h  semaphore.hpp  threadpool.cpp  threadpool.h  threadpool.hpp
chen/sys/: fs.cpp  sys.cpp
chen/tool/: any.cpp  any.hpp  cmd.cpp  cmd.h  cmd.hpp  date.cpp  date.h  date.hpp  fs.cpp  fs.hpp  log.cpp  log.h  log.hpp  num.cpp  num.h  num.hpp  path.cpp  path.hpp  regex.cpp  regex.hpp  str.cpp  str.h  str.hpp  sys.cpp  sys.hpp
cmake/: ChenInit.cmake  ChenUtil.cmake  Environment.cmake
data/: json.cpp  json.h  plist.cpp  plist.h  xml.cpp
demo/: demo.cpp  demo.hpp
include/chen/: chen.hpp
include/socket/: config.hpp  socket.hpp  status.hpp
lang/: locale.cpp  locale.h
lib/ifaddrs/: CMakeLists.txt  ifaddrs.c  ifaddrs.cpp  ifaddrs.h  ifaddrs.hpp
lib/libchen/: .gitignore  .travis.yml  CHANGELOG.md  CMakeEnv.cmake  CMakeLists.txt  README.md  TODO  appveyor.yml  circle.sh  circle.yml
lib/libchen/cmake/: ChenUtil.cmake  Environment.cmake
lib/libchen/include/chen/: chen.hpp
lib/libchen/include/chen/base/: any.hpp  iterator.hpp  map.hpp  num.hpp  regex.hpp  str.hpp  utf8.hpp  vector.hpp
lib/libchen/include/chen/data/: ini.hpp  json.hpp
lib/libchen/include/chen/mt/: callable.hpp  semaphore.hpp  threadpool.hpp
lib/libchen/include/chen/sys/: fs.hpp  proc.hpp  sys.hpp
lib/libchen/include/chen/time/: date.hpp
lib/libchen/include/chen/tool/: cmd.hpp  log.hpp
lib/libchen/src/base/: num.cpp  regex.cpp  str.cpp  utf8.cpp
lib/libchen/src/data/: ini.cpp  json.cpp
lib/libchen/src/mt/: semaphore.cpp  threadpool.cpp
lib/libchen/src/plat/: date.unix.cpp  date.win.cpp  fs.unix.cpp  fs.win.cpp  proc.unix.cpp  proc.win.cpp  sys.unix.cpp  sys.win.cpp
lib/libchen/src/plat/unix/: date_unix.cpp  proc_unix.cpp  sys_unix.cpp
lib/libchen/src/plat/win/: sys_win.cpp
lib/libchen/src/sys/: fs.cpp  fs.unix.cpp  fs.win.cpp  proc.unix.cpp  proc.win.cpp  sys.cpp  sys.unix.cpp  sys.win.cpp
lib/libchen/src/time/: date.cpp  date.unix.cpp  date.win.cpp  time.cpp
lib/libchen/src/tool/: cmd.cpp  log.cpp
lib/libchen/test/: CMakeLists.txt  conf.cpp  conf.hpp  main.cpp
lib/libchen/test/data/ini/: fail1.ini  fail3.ini  fail5.ini  pass1.ini  pass3.ini  pass4.ini
lib/libchen/test/data/json/: role.json
lib/libchen/test/data/utf8/: sub.txt
lib/libchen/test/src/: main.cpp
lib/libchen/test/src/base/: any.cpp  any.hpp  iterator.cpp  map.cpp  map.hpp  num.cpp  num.hpp  regex.cpp  regex.hpp  str.cpp  str.hpp  utf8.cpp  utf8.hpp  vector.cpp  vector.hpp
lib/libchen/test/src/data/: ini.cpp  ini.hpp  json.cpp  json.hpp
lib/libchen/test/src/mt/: threadpool.cpp  threadpool.hpp
lib/libchen/test/src/sys/: fs.cpp  fs.hpp  sys.cpp  sys.hpp
lib/libchen/test/src/tool/: cmd.cpp  cmd.hpp
net/dns/: dns_client.cpp  dns_client.h  dns_error.cpp  dns_error.h  dns_packet.cpp  dns_packet.h  dns_record.cpp  dns_record.h  dns_server.cpp  dns_server.h  dns_tool.cpp  dns_tool.h  dns_types.cpp  dns_types.h
net/ip/: ip_addr.cpp  ip_addr.h  ip_error.h
net/udp/: udp_client.cpp  udp_client.h  udp_error.cpp  udp_error.h  udp_packet.cpp  udp_packet.h  udp_server.cpp  udp_server.h  udp_socket.cpp  udp_socket.h
os/unix/: net_unix.cpp  udp_socket_unix.cpp
os/win32/: net_win32.cpp  win32.cpp
plat/unix/: dns_tool_unix.cpp  udp_server_unix.cpp  udp_socket_unix.cpp  udp_socket_unix.h
src/base/: any.cpp  base_common.cpp  base_endpoint.cpp  base_option.cpp  base_resolver.cpp  basic_event.cpp  basic_handle.cpp  basic_option.cpp  basic_socket.cpp  basic_socket.unix.cpp  basic_socket.win.cpp  bsd_option.cpp  bsd_socket.cpp  bsd_socket.unix.cpp  bsd_socket.win.cpp  date.cpp  ev_base.cpp  ev_event.linux.cpp  ev_event.unix.cpp  ev_event.win.cpp  ev_handle.cpp  ev_timer.cpp  event_notify.unix.cpp  event_timer.linux.cpp  event_timer.unix.cpp  event_timer.win.cpp  num.cpp  reactor_epoll.cpp  reactor_kqueue.cpp  reactor_poller.cpp  regex.cpp  service_epoll.cpp  str.cpp  (+4 more)
sync/: routine.cpp  routine.h  semaphore.cpp  semaphore.h  threadpool.cpp  threadpool.h
test/: CMakeLists.txt  base.any.hpp  main.cpp  net.ip.hpp  test.cpp  test.hpp  test_base.h  test_base.hpp  test_cmd.h  test_cmd.hpp  test_ip.h  test_ip.hpp  test_udp.h  test_udp.hpp
test/data/ini/: fail2.ini  fail4.ini  pass2.ini  pass3.ini
test/data/utf8/: bom.txt  code.txt  plain.txt
test/src/: main.cpp
test/src/base/: any.cpp  any.hpp  array.hpp  base_endpoint.cpp  base_resolver.cpp  basic_option.cpp  basic_socket.cpp  iter.hpp  iterator.cpp  iterator.hpp  map.cpp  map.hpp  num.cpp  num.hpp  regex.cpp  regex.hpp  str.cpp  str.hpp  utf8.cpp  utf8.hpp  vector.cpp  vector.hpp
test/src/core/: reactor.cpp  reactor_echo.cpp  reactor_timer.cpp
test/src/data/: ini.cpp  ini.hpp  json.cpp  json.hpp
test/src/inet/: inet_adapter.cpp  inet_address.cpp  inet_resolver.cpp
test/src/ip/: ip_addr.hpp  ip_address.cpp  ip_address.hpp  ip_interface.cpp  ip_option.cpp  ip_subnet.cpp
test/src/mt/: threadpool.cpp  threadpool.hpp
test/src/net/: ip.hpp  net_address.cpp  net_endpoint.cpp  net_resolver.cpp  net_socket.cpp
test/src/so/: so_endpoint.cpp  so_endpoint.hpp
test/src/sys/: fs.cpp  fs.hpp  sys.cpp  sys.hpp
test/src/tcp/: tcp_client.cpp  tcp_simple.cpp  tcp_test.cpp
test/src/time/: date.cpp
test/src/tool/: cmd.cpp  cmd.hpp
tool/: cmd.cpp  cmd.h  date.cpp  log.cpp  log.h  str.cpp  str.h
unit/: CMakeLists.txt  unit.cpp  unit.h  unit.hpp  unit_base.h  unit_base.hpp  unit_cmd.h  unit_cmd.hpp  unit_ip.h  unit_ip.hpp  unit_udp.hpp
(+507 files in other folders)
